Desenvolvimento do Header e do banner

--- a/Web/index.html
+++ b/Web/index.html
@@ -10,6 +10,31 @@
 
 <body>
 
+  <header class="header">
+    <div class="container_header">
+      <a href="#"><img src="img/logo.png" alt="PS"></a>
+
+      <nav>
+        <ul>
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">Serviços</a></li>
+          <li><a href="">Quem somos</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="banner_content">
+    <div class="container">
+      <article>
+        <p class="trace_light">Aqui você encontra soluções, dicas recomendações de saúde para toda família</p>
+        <a href="" class="button_light">Começar</a>
+      </article>
+    </div>
+  </section>
+
+
 </body>
 
 </html>
