Desenvolvimento da seção Wallet

--- a/Web/index.html
+++ b/Web/index.html
@@ -28,13 +28,25 @@
   <section class="banner_content">
     <div class="container">
       <article>
-        <p class="trace_light">Aqui você encontra soluções, dicas recomendações de saúde para toda família</p>
+        <h1 class="trace_light">Aqui você encontra soluções, dicas recomendações de saúde para toda família</h1>
         <a href="" class="button_light">Começar</a>
       </article>
     </div>
   </section>
 
-
+  <section class="wallet">
+    <ul class="wallet-content">
+      <li>
+        <h3 class="trace_dark">Carteira online</h3>
+        <p>Verifique e veja, se a sua caderneta de vacinação está atualizada, se não estiver agende uma consulta!</p>
+        <a href="" class="button_dark">Clique aqui!</a>
+      </li>
+      <li>
+        <img src="./img/img_carteira.png" alt="Carteira Online PS">
+      </li>
+    </ul>
+  </section>
+  a
 </body>
 
 </html>
