Inicio do Desenvolvimento do agendamento

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
   </section>
 
+
   <section class="wallet">
     <ul class="wallet-content">
       <li>
@@ -46,7 +47,27 @@
       </li>
     </ul>
   </section>
-  a
+
+
+  <section class="schedule">
+    <h3 class="trace_light">Agendamentos de vacinas</h3>
+    <ul>
+      <li>
+        <h4>Vacinação Domiciliar</h4>
+        <article>
+          <p>Agende sua <span>vacina</span> em casa</p>
+          <p>Escolha:</p>
+          <p>- Dia</p>
+          <p>- Horário</p>
+          <p>- Forma de pagamento</p>
+        </article>
+        <a href="" class="button_dark">Agendar</a>
+      <li></li>
+      <li></li>
+    </ul>
+  </section>
+
+
 </body>
 
 </html>
