Desenvolvimento da seção utility

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     </div>
   </section>
 
-
   <section class="wallet">
     <ul class="wallet-content">
       <li>
@@ -47,7 +46,6 @@
       </li>
     </ul>
   </section>
-
 
   <section class="schedule">
     <h3 class="trace_light">Agendamentos de vacinas</h3>
@@ -84,6 +82,18 @@
     </ul>
   </section>
 
+  <section class="utility">
+    <h3 class="trace_dark">Utilidade pública</h3>
+    <ul>
+      <li>
+        <article>
+          <h4>Pacientes Alérgicos</h4>
+          <p>Para ajudar no tratamento alérgicos de pacientes, oferecemos dicas como além de vacinação, evitar aglomerações, limpeza regular da casa, evitar animais como gatos, lavar frequentemente roupas de cama, ficar longe de bichinhos de pelúcia...</p>
+        </article>
+        <img src="img/img_utilidade.png" alt="Utilidade pública PS">
+      </li>
+    </ul>
+  </section>
 
 </body>
 
