Andamento do Desenvolvimento do service

--- a/index.html
+++ b/index.html
@@ -95,6 +95,42 @@
     </ul>
   </section>
 
+  <section class="services">
+    <h3 class="trace_dark">Serviços</h3>
+    <ul>
+      <li>
+        <h4>Vacinação</h4>
+        <div>
+          <img src="img/icon_ingeção.png" alt="Vacinação no PS">
+        </div>
+        <p>Oferecemos aos pacientes três formas de vacinação, <span>domiciliar, empresarial</span>, e no <span>posto de saúde</span>, basta agendar</p>
+      </li>
+
+      <li>
+        <h4>Remédios</h4>
+        <div>
+          <img src="img/icon_remedio.svg" alt="Vacinação no PS">
+        </div>
+        <p>Os pacientes <span>podem</span> pedir <span>remédios</span> específicos direto de suas casa, que entregarem com a <span>documentação</span></p>
+      </li>
+      <li>
+
+        <h4>Consultas</h4>
+        <div>
+          <img src="img/icon_consultas.png" alt="Vacinação no PS">
+        </div>
+        <p>Aqui oferecemos <span>agendamento</span> de consultas online, requerida pelo site e pelo nosso telefone, <span>agende</span> já!</p>
+      </li>
+      <li>
+        <h4>Utilidade pública</h4>
+        <div>
+          <img src="img/icon_utilidade.png" alt="Vacinação no PS">
+        </div>
+        <p>No nosso site postamos dicas de <span>saúde</span>, para pacientes alérgicos, assim você também pode se ajudar nos <span>ajudando!</span></p>
+      </li>
+    </ul>
+  </section>
+
 </body>
 
 </html>
