--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <li>
         <h4>Vacinação</h4>
         <div>
-          <img src="img/icon_ingeção.png" alt="Vacinação no PS">
+          <img src="img/icon_ingeção.svg" alt="Vacinação no PS">
         </div>
         <p>Oferecemos aos pacientes três formas de vacinação, <span>domiciliar, empresarial</span>, e no <span>posto de saúde</span>, basta agendar</p>
       </li>
@@ -109,7 +109,7 @@
       <li>
         <h4>Remédios</h4>
         <div>
-          <img src="img/icon_remedio.svg" alt="Vacinação no PS">
+          <img src="img/icon_remedios.svg" alt="Vacinação no PS">
         </div>
         <p>Os pacientes <span>podem</span> pedir <span>remédios</span> específicos direto de suas casa, que entregarem com a <span>documentação</span></p>
       </li>
@@ -117,14 +117,15 @@
 
         <h4>Consultas</h4>
         <div>
-          <img src="img/icon_consultas.png" alt="Vacinação no PS">
+          <img src="img/icon_consulta.svg" alt="Vacinação no PS">
         </div>
         <p>Aqui oferecemos <span>agendamento</span> de consultas online, requerida pelo site e pelo nosso telefone, <span>agende</span> já!</p>
       </li>
       <li>
-        <h4>Utilidade pública</h4>
+
+        <h4>Uti. pública</h4>
         <div>
-          <img src="img/icon_utilidade.png" alt="Vacinação no PS">
+          <img src="img/icon_utilidade.svg" alt="Vacinação no PS">
         </div>
         <p>No nosso site postamos dicas de <span>saúde</span>, para pacientes alérgicos, assim você também pode se ajudar nos <span>ajudando!</span></p>
       </li>
