Desenvolvimento da seção quem somos

--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
     </ul>
   </section>
 
+  <section class="who_we_are">
+
+    <ul>
+      <h3 class="trace_light">Quem somos</h3>
+      <li>
+        <p>Um jovens da faculdade de tecnologia, Fatec - Taquaritinga, onde como trabalho para fins educativos, escolhi o tema "saúde", com o objetivo de desenvolver um site e colocar em práticas os conceitos aprendidos nas aulas, aprimorando as competências socioemocionais, como auto liderança, e técnicas como de codificação de páginas web.
+        </p>
+        <p>O site contém algumas informações fictícias.</p>
+      </li>
+    </ul>
+  </section>
+
 </body>
 
 </html>
