--- a/index.html
+++ b/index.html
@@ -142,6 +142,66 @@
         <p>O site contém algumas informações fictícias.</p>
       </li>
     </ul>
+
+  </section>
+
+  <section class="contact">
+    <ul>
+      <li>
+        <h3 class="trace_dark">Contato</h3>
+        <p>Dúvidas? comentários ou sugestões?<br>Preencha o formulário e envie-nos</p>
+
+        <div>
+          <a href="">aquiumemail@gmail.com</a>
+          <a href="">+ 55 (14) 99999-9999</a>
+          <a href="">aquiumsite.com.br</a>
+        </div>
+
+        <div>
+          <a href=""><img src="img/icon_facebook.png" alt="Facebook do PS"></a>
+          <a href=""><img src="img/icon_Twitter.png" alt="Twitter do PS"></a>
+          <a href=""><img src="img/icon_linkedin.png" alt="Linkedin do PS"></a>
+        </div>
+      </li>
+
+      <li>
+        <form id="" action="" method="">
+          <label for="name">Nome <span>*</span></label>
+          <input type="text" name="name" id="" />
+
+          <label for="city">Cidade <span>*</span></label>
+          <input type="text" name="city" id="" />
+
+          <div class="align_input_container">
+            <div class="align_input">
+
+              <label for="federative_unit">Uf <span>*</span></label>
+              <select name="federative_unit" id="">
+                <option value="#">São Paulo</option>
+                <option value="#">Rio de Janeiro</option>
+                <option value="#">Mato Grosso</option>
+                <option value="#">Bahia</option>
+                <option value="#">Goiás</option>
+                <option value="#">Paraná</option>
+                <option value="#">Santa Catarina</option>
+              </select>
+            </div>
+
+            <div class="align_input">
+              <label for="phone">Telefone</label>
+              <input type="text" name="phone" id="" placeholder="+ 55" />
+            </div>
+          </div>
+
+          <label for="email">E-mail <span>*</span></label>
+          <input type="email" name="email" id="" aria-label="+ 55" />
+          <label for="mensagem">mensagem <span>*</span></label>
+          <textarea name="mensagem" id=""></textarea>
+
+          <button class="button_dark">Enviar</button>
+        </form>
+      </li>
+    </ul>
   </section>
 
 </body>
