Desenvolvimento do footer

--- a/index.html
+++ b/index.html
@@ -25,185 +25,213 @@
     </div>
   </header>
 
-  <section class="banner_content">
-    <div class="container">
-      <article>
-        <h1 class="trace_light">Aqui você encontra soluções, dicas recomendações de saúde para toda família</h1>
-        <a href="" class="button_light">Começar</a>
-      </article>
-    </div>
-  </section>
-
-  <section class="wallet">
-    <ul class="wallet-content">
-      <li>
-        <h3 class="trace_dark">Carteira online</h3>
-        <p>Verifique e veja, se a sua caderneta de vacinação está atualizada, se não estiver agende uma consulta!</p>
-        <a href="" class="button_dark">Clique aqui!</a>
-      </li>
-      <li>
-        <img src="./img/img_carteira.png" alt="Carteira Online PS">
-      </li>
-    </ul>
-  </section>
-
-  <section class="schedule">
-    <h3 class="trace_light">Agendamentos de vacinas</h3>
-    <ul>
-      <li>
-        <h4>Vacinação Domiciliar</h4>
+  <main>
+    <section class="banner_content">
+      <div class="container">
         <article>
-          <p>Agende sua <span>vacina</span> em casa</p>
-          <p>Escolha:</p>
-          <p>- Dia</p>
-          <p>- Horário</p>
-          <p>- Forma de pagamento</p>
+          <h1 class="trace_light">Aqui você encontra soluções, dicas recomendações de saúde para toda família</h1>
+          <a href="" class="button_light">Começar</a>
         </article>
-        <a href="" class="button_dark">Agendar</a>
-      </li>
+      </div>
+    </section>
 
-      <li>
-        <h4>Vacinação Empresarial</h4>
-        <article>
-          <p>Com o agendamento de sua empresa para <span>vacinação</span>, terá comodidade para os funcionários, <span>melhoria</span> na qualidade de vida e no ambiente de trabalho</p>
-        </article>
-        <a href="" class="button_dark">Agendar</a>
-      </li>
+    <section class="wallet">
+      <ul class="wallet-content">
+        <li>
+          <h3 class="trace_dark">Carteira online</h3>
+          <p>Verifique e veja, se a sua caderneta de vacinação está atualizada, se não estiver agende uma consulta!</p>
+          <a href="" class="button_dark">Clique aqui!</a>
+        </li>
+        <li>
+          <img src="./img/img_carteira.png" alt="Carteira Online PS">
+        </li>
+      </ul>
+    </section>
 
-      <li>
-        <h4>Vacinação Domiciliar</h4>
-        <article>
-          <p>Agende vacinas para você e sua <span>família</span> em sua casa, evite aglomerações em filas com o agendamento online</p>
+    <section class="schedule">
+      <h3 class="trace_light">Agendamentos de vacinas</h3>
+      <ul>
+        <li>
+          <h4>Vacinação Domiciliar</h4>
+          <article>
+            <p>Agende sua <span>vacina</span> em casa</p>
+            <p>Escolha:</p>
+            <p>- Dia</p>
+            <p>- Horário</p>
+            <p>- Forma de pagamento</p>
+          </article>
+          <a href="" class="button_dark">Agendar</a>
+        </li>
 
-        </article>
-        <a href="" class="button_dark">Agendar</a>
-      </li>
+        <li>
+          <h4>Vacinação Empresarial</h4>
+          <article>
+            <p>Com o agendamento de sua empresa para <span>vacinação</span>, terá comodidade para os funcionários, <span>melhoria</span> na qualidade de vida e no ambiente de trabalho</p>
+          </article>
+          <a href="" class="button_dark">Agendar</a>
+        </li>
 
-    </ul>
-  </section>
+        <li>
+          <h4>Vacinação Domiciliar</h4>
+          <article>
+            <p>Agende vacinas para você e sua <span>família</span> em sua casa, evite aglomerações em filas com o agendamento online</p>
 
-  <section class="utility">
-    <h3 class="trace_dark">Utilidade pública</h3>
-    <ul>
-      <li>
-        <article>
-          <h4>Pacientes Alérgicos</h4>
-          <p>Para ajudar no tratamento alérgicos de pacientes, oferecemos dicas como além de vacinação, evitar aglomerações, limpeza regular da casa, evitar animais como gatos, lavar frequentemente roupas de cama, ficar longe de bichinhos de pelúcia...</p>
-        </article>
-        <img src="img/img_utilidade.png" alt="Utilidade pública PS">
-      </li>
-    </ul>
-  </section>
+          </article>
+          <a href="" class="button_dark">Agendar</a>
+        </li>
 
-  <section class="services">
-    <h3 class="trace_dark">Serviços</h3>
-    <ul>
-      <li>
-        <h4>Vacinação</h4>
-        <div>
-          <img src="img/icon_ingeção.svg" alt="Vacinação no PS">
-        </div>
-        <p>Oferecemos aos pacientes três formas de vacinação, <span>domiciliar, empresarial</span>, e no <span>posto de saúde</span>, basta agendar</p>
-      </li>
+      </ul>
+    </section>
 
-      <li>
-        <h4>Remédios</h4>
-        <div>
-          <img src="img/icon_remedios.svg" alt="Vacinação no PS">
-        </div>
-        <p>Os pacientes <span>podem</span> pedir <span>remédios</span> específicos direto de suas casa, que entregarem com a <span>documentação</span></p>
-      </li>
-      <li>
+    <section class="utility">
+      <h3 class="trace_dark">Utilidade pública</h3>
+      <ul>
+        <li>
+          <article>
+            <h4>Pacientes Alérgicos</h4>
+            <p>Para ajudar no tratamento alérgicos de pacientes, oferecemos dicas como além de vacinação, evitar aglomerações, limpeza regular da casa, evitar animais como gatos, lavar frequentemente roupas de cama, ficar longe de bichinhos de pelúcia...</p>
+          </article>
+          <img src="img/img_utilidade.png" alt="Utilidade pública PS">
+        </li>
+      </ul>
+    </section>
 
-        <h4>Consultas</h4>
-        <div>
-          <img src="img/icon_consulta.svg" alt="Vacinação no PS">
-        </div>
-        <p>Aqui oferecemos <span>agendamento</span> de consultas online, requerida pelo site e pelo nosso telefone, <span>agende</span> já!</p>
-      </li>
-      <li>
+    <section class="services">
+      <h3 class="trace_dark">Serviços</h3>
+      <ul>
+        <li>
+          <h4>Vacinação</h4>
+          <div>
+            <img src="img/icon_ingeção.svg" alt="Vacinação no PS">
+          </div>
+          <p>Oferecemos aos pacientes três formas de vacinação, <span>domiciliar, empresarial</span>, e no <span>posto de saúde</span>, basta agendar</p>
+        </li>
 
-        <h4>Uti. pública</h4>
-        <div>
-          <img src="img/icon_utilidade.svg" alt="Vacinação no PS">
-        </div>
-        <p>No nosso site postamos dicas de <span>saúde</span>, para pacientes alérgicos, assim você também pode se ajudar nos <span>ajudando!</span></p>
-      </li>
-    </ul>
-  </section>
+        <li>
+          <h4>Remédios</h4>
+          <div>
+            <img src="img/icon_remedios.svg" alt="Vacinação no PS">
+          </div>
+          <p>Os pacientes <span>podem</span> pedir <span>remédios</span> específicos direto de suas casa, que entregarem com a <span>documentação</span></p>
+        </li>
+        <li>
 
-  <section class="who_we_are">
+          <h4>Consultas</h4>
+          <div>
+            <img src="img/icon_consulta.svg" alt="Vacinação no PS">
+          </div>
+          <p>Aqui oferecemos <span>agendamento</span> de consultas online, requerida pelo site e pelo nosso telefone, <span>agende</span> já!</p>
+        </li>
+        <li>
 
-    <ul>
-      <h3 class="trace_light">Quem somos</h3>
-      <li>
-        <p>Um jovens da faculdade de tecnologia, Fatec - Taquaritinga, onde como trabalho para fins educativos, escolhi o tema "saúde", com o objetivo de desenvolver um site e colocar em práticas os conceitos aprendidos nas aulas, aprimorando as competências socioemocionais, como auto liderança, e técnicas como de codificação de páginas web.
-        </p>
-        <p>O site contém algumas informações fictícias.</p>
-      </li>
-    </ul>
+          <h4>Uti. pública</h4>
+          <div>
+            <img src="img/icon_utilidade.svg" alt="Vacinação no PS">
+          </div>
+          <p>No nosso site postamos dicas de <span>saúde</span>, para pacientes alérgicos, assim você também pode se ajudar nos <span>ajudando!</span></p>
+        </li>
+      </ul>
+    </section>
 
-  </section>
+    <section class="who_we_are">
 
-  <section class="contact">
-    <ul>
-      <li>
-        <h3 class="trace_dark">Contato</h3>
-        <p>Dúvidas? comentários ou sugestões?<br>Preencha o formulário e envie-nos</p>
+      <ul>
+        <h3 class="trace_light">Quem somos</h3>
+        <li>
+          <p>Um jovens da faculdade de tecnologia, Fatec - Taquaritinga, onde como trabalho para fins educativos, escolhi o tema "saúde", com o objetivo de desenvolver um site e colocar em práticas os conceitos aprendidos nas aulas, aprimorando as competências socioemocionais, como auto liderança, e técnicas como de codificação de páginas web.
+          </p>
+          <p>O site contém algumas informações fictícias.</p>
+        </li>
+      </ul>
 
-        <div>
-          <a href="">aquiumemail@gmail.com</a>
-          <a href="">+ 55 (14) 99999-9999</a>
-          <a href="">aquiumsite.com.br</a>
-        </div>
+    </section>
 
-        <div>
-          <a href=""><img src="img/icon_facebook.png" alt="Facebook do PS"></a>
-          <a href=""><img src="img/icon_Twitter.png" alt="Twitter do PS"></a>
-          <a href=""><img src="img/icon_linkedin.png" alt="Linkedin do PS"></a>
-        </div>
-      </li>
+    <section class="contact">
+      <ul>
+        <li>
+          <h3 class="trace_dark">Contato</h3>
+          <p>Dúvidas? comentários ou sugestões?<br>Preencha o formulário e envie-nos</p>
 
-      <li>
-        <form id="" action="" method="">
-          <label for="name">Nome <span>*</span></label>
-          <input type="text" name="name" id="" />
-
-          <label for="city">Cidade <span>*</span></label>
-          <input type="text" name="city" id="" />
-
-          <div class="align_input_container">
-            <div class="align_input">
-
-              <label for="federative_unit">Uf <span>*</span></label>
-              <select name="federative_unit" id="">
-                <option value="#">São Paulo</option>
-                <option value="#">Rio de Janeiro</option>
-                <option value="#">Mato Grosso</option>
-                <option value="#">Bahia</option>
-                <option value="#">Goiás</option>
-                <option value="#">Paraná</option>
-                <option value="#">Santa Catarina</option>
-              </select>
-            </div>
-
-            <div class="align_input">
-              <label for="phone">Telefone</label>
-              <input type="text" name="phone" id="" placeholder="+ 55" />
-            </div>
+          <div>
+            <a href="">aquiumemail@gmail.com</a>
+            <a href="">+ 55 (14) 99999-9999</a>
+            <a href="">aquiumsite.com.br</a>
           </div>
 
-          <label for="email">E-mail <span>*</span></label>
-          <input type="email" name="email" id="" aria-label="+ 55" />
-          <label for="mensagem">mensagem <span>*</span></label>
-          <textarea name="mensagem" id=""></textarea>
+          <div>
+            <a href=""><img src="img/icon_facebook.png" alt="Facebook do PS"></a>
+            <a href=""><img src="img/icon_Twitter.png" alt="Twitter do PS"></a>
+            <a href=""><img src="img/icon_linkedin.png" alt="Linkedin do PS"></a>
+          </div>
+        </li>
 
-          <button class="button_dark">Enviar</button>
-        </form>
-      </li>
-    </ul>
-  </section>
+        <li>
+          <form id="" action="" method="">
+            <label for="name">Nome <span>*</span></label>
+            <input type="text" name="name" id="" />
 
+            <label for="city">Cidade <span>*</span></label>
+            <input type="text" name="city" id="" />
+
+            <div class="align_input_container">
+              <div class="align_input">
+
+                <label for="federative_unit">Uf <span>*</span></label>
+                <select name="federative_unit" id="">
+                  <option value="#">São Paulo</option>
+                  <option value="#">Rio de Janeiro</option>
+                  <option value="#">Mato Grosso</option>
+                  <option value="#">Bahia</option>
+                  <option value="#">Goiás</option>
+                  <option value="#">Paraná</option>
+                  <option value="#">Santa Catarina</option>
+                </select>
+              </div>
+
+              <div class="align_input">
+                <label for="phone">Telefone</label>
+                <input type="text" name="phone" id="" placeholder="+ 55" />
+              </div>
+            </div>
+
+            <label for="email">E-mail <span>*</span></label>
+            <input type="email" name="email" id="" aria-label="+ 55" />
+            <label for="mensagem">mensagem <span>*</span></label>
+            <textarea name="mensagem" id=""></textarea>
+
+            <button class="button_dark">Enviar</button>
+          </form>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <div class="content_footer">
+      <ul>
+        <li>
+          <h3><i>Bem vindo ao site!</i></h3>
+          <p><i>Aqui você encontra soluções, dicas recomendações de saúde para toda família</i></p>
+          <p><i>O site contém informações fictícias, por ser a fins educativos, qualquer coisa consulte um médico na sua cidade!</i></p>
+        </li>
+
+        <li>
+          <h3><i>Mapa do site</i></h3>
+          <div>
+            <a href=""><i>HOME</i></a>
+            <a href=""><i>SERVIÇOS</i></a>
+            <a href=""><i>QUEM SOMOS</i></a>
+            <a href=""><i>CONTATO</i></a>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="copy">
+      <p><i>PS 2021 - Todos os direitos reservados</i></p>
+    </div>
+
+  </footer>
 </body>
 
 </html>
