--- a/index.html
+++ b/index.html
@@ -5,22 +5,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PS | Bem vindo!</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/responsivo.css">
 </head>
+
+
 
 <body>
 
-  <header class="header">
+  <header>
     <div class="container_header">
-      <a href="#"><img src="img/logo.png" alt="PS"></a>
+      <nav class="navbar-expand-md d-flex align-items-center justify-content-between">
 
-      <nav>
-        <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">Serviços</a></li>
-          <li><a href="">Quem somos</a></li>
-          <li><a href="">Contato</a></li>
-        </ul>
+        <div class="button_logo">
+          <button class="navbar-toggler shadow-none" type="button" onclick="openMenu()">
+            <img src="img/menu.svg" height="30px" alt="PS">
+          </button>
+
+          <a class="navbar-brand" href="/">
+            <img src="img/logo.png" alt="PS">
+          </a>
+        </div>
+
+        <div class="list">
+          <div class="collapse navbar-collapse">
+            <ul>
+              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">Serviços</a></li>
+              <li><a href="#">Quem somos</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
+
+          <div class="modal fade right" id="Modalmenu" tabindex="-1" role="dialog" aria-labelledby="exampleModalPreviewLabel" aria-hidden="true">
+            <div class="modal-dialog-full-width modal-dialog momodel modal-fluid" role="document">
+              <div class="modal-content-full-width modal-content border-0 bg-white">
+
+                <div class="border-0  modal-header text-center d-flex align-items-center">
+                  <div class="d-flex">
+                    <div class="nav-item input-group-prepend h-25 ml-3 d-flex align-items-center">
+                      <a class="nav-link size-14 px-2 item_menu" href="#">Login</a>
+                    </div>
+
+                    <div class="nav-item input-group-prepend h-25 ml-2 d-flex align-items-baseline">
+                      <span style="opacity:0.3;">|</span><a class="nav-link size-14 px-3 item_menu" href="#">Cadastrar</a>
+                    </div>
+                  </div>
+                  <button class="button_close" type="button" onclick="closeMenu()">
+                    <span class="p-2" style="font-size: 1.3em;">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <ul class="navbar-nav ml-auto ">
+                    <li><a href="" class="active">Home</a></li>
+                    <li><a href="">Serviços</a></li>
+                    <li><a href="">Quem somos</a></li>
+                    <li><a href="">Contato</a></li>
+                  </ul>
+                </div>
+
+                <div class="modal-footer-full-width  modal-footer d-flex flex-column align-items-start justify-content-center">
+                  <div class="nav-item ml-3">
+                    <a class="nav-link size-14 item_menu" href="/">Ajuda</a>
+                  </div>
+
+                  <div class="nav-item ml-3">
+                    <a class="nav-link size-14 item_menu" href="/Contact">Contato</a>
+                  </div>
+                </div>
+              </div>
       </nav>
     </div>
   </header>
@@ -134,7 +190,6 @@
     </section>
 
     <section class="who_we_are">
-
       <ul>
         <h3 class="trace_light">Quem somos</h3>
         <li>
@@ -143,7 +198,6 @@
           <p>O site contém algumas informações fictícias.</p>
         </li>
       </ul>
-
     </section>
 
     <section class="contact">
@@ -230,8 +284,15 @@
     <div class="copy">
       <p><i>PS 2021 - Todos os direitos reservados</i></p>
     </div>
-
   </footer>
+
+
+  <!-- Importando o jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+
 </body>
 
 </html>
