--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="img/menu.svg" height="30px" alt="PS">
           </button>
 
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" alt="PS">
           </a>
         </div>
